# bhavnastitch

./: README.md
backend/: WORKSPACE  package-lock.json  package.json  tsconfig.json
backend/bh-orders-app/: BUILD.bazel  bootstrapper.ts  cdk.json  index.ts  template.yml
backend/bh-orders-app/cdk.out/: MyStaticSite.template.json  manifest.json
backend/bh-orders-app/resources/: static-site.ts
backend/bh-orders-app/src/: BUILD.bazel  index.ts
backend/bh-orders-app/src/handlers/: put-item.ts
backend/bh-shared-layers/: BUILD.bazel  template.yml
backend/bh-shared-layers/src/nodejs/: package-lock.json  package.json
backend/bh-shared-services/: BUILD.bazel  template.yml
backend/bh-shared-services/src/: BUILD.bazel  index.ts
backend/scripts/: deploy-layer.sh  deploy-sam.sh
