load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "src",
    srcs = glob([
        "src/**/*.json"
    ]),
    extension = "tar.gz",
    package_dir = "src/nodejs",
)

pkg_tar(
    name = "s3_pack",
    srcs = [
        "template.yml",
    ],
    extension = "tar.gz",
    deps = [
        ":src"
    ]
)

genrule(
    name = "zip",
    srcs = [
        ":s3_pack",
    ],
    outs = ["latest.zip"],
    cmd = "tar -xzf $(location :s3_pack) && zip -r $@ * -x \"*bazel-out*\" -x \"*external*\"",
    output_to_bindir = True,
)
