load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

genrule(
    name = "bh-shared-services",
    srcs = [
        "//bh-shared-services/src:bundle.js",
    ],
    outs = ["bundle.js"],
    cmd = "cp $< $@",
)

pkg_tar(
    name = "src",
    srcs = [
        ":bundle"
    ],
    extension = "tar.gz",
    package_dir = "src/nodejs/node_modules",
)

pkg_tar(
    name = "s3_pack",
    srcs = [
        "template.yml",
    ],
    extension = "tar.gz",
    deps = [
        ":src",
        ":src2"
    ],
)

genrule(
    name = "zip",
    srcs = [
        ":s3_pack",
    ],
    outs = ["latest.zip"],
    cmd = "tar -xzf $(location :s3_pack) && zip -r $@ * -x \"*bazel-out*\" -x \"*external*\"",
    output_to_bindir = True,
)
