package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")

alias(
    name = "tsconfig.json",
    actual = "//:tsconfig.json",
)

ts_library(
    name = "src",
    srcs = glob(["**/*.ts"]),
    tsconfig = ":tsconfig.json",
    deps = [
    ],
)

rollup_bundle(
    name = "bundle",
    enable_code_splitting = False,
    entry_point = ":index.ts",
    global_name = "exports",
    globals = {
    },
    deps = [
        ":src",
    ],
)
