package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")

alias(
    name = "config",
    actual = "//:tsconfig.json",
)

ts_library(
    name = "src",
    srcs = glob(["**/*.ts"]),
    tsconfig = ":config",
    deps = [
      "@npm//@types/node",
      "@npm//moment",
      "//bh-shared-services/src:library"
    ],
)

rollup_bundle(
    name = "bundle",
    enable_code_splitting = False,
    entry_point = ":index.ts",
    global_name = "exports",
    globals = {
      'moment':'require("moment")',
      'backend/bh-shared-services/src/index':'require("bh-shared-services")'
    },
    deps = [
        ":src",
    ],
)
