package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle","npm_package")

alias(
    name = "config",
    actual = "//:tsconfig.json",
)

ts_library(
    name = "library",
    srcs = glob(["**/*.ts"]),
    tsconfig = ":config",
    deps = [
      "@npm//@types/node",
    ],
)

rollup_bundle(
    name = "bundle",
    enable_code_splitting = False,
    entry_point = ":index.ts",
    global_name = "exports",
    globals = {
    },
    deps = [
        ":library",
    ],
)
